tests/ui/proc-macro/weird-hygiene.stderr
error[E0425]: cannot find value `hidden_ident` in this scope
  --> $DIR/weird-hygiene.rs:24:43
   |
LL |             Value = (stringify!($tokens + hidden_ident), 1).1
   |                                           ^^^^^^^^^^^^ not found in this scope
...
LL |     other!(50);
   |     ---------- in this macro invocation
   |
help: an identifier with the same name exists, but is not accessible due to macro hygiene
  --> $DIR/weird-hygiene.rs:44:9
   |
LL |     let hidden_ident = "Hello1";
   |         ^^^^^^^^^^^^
   = note: this error originates in the macro `inner` which comes from the expansion of the macro `other` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `hidden_ident` in this scope
  --> $DIR/weird-hygiene.rs:35:13
   |
LL |             hidden_ident
   |             ^^^^^^^^^^^^ not found in this scope
...
LL |     invoke_it!(25);
   |     -------------- in this macro invocation
   |
help: an identifier with the same name exists, but is not accessible due to macro hygiene
  --> $DIR/weird-hygiene.rs:44:9
   |
LL |     let hidden_ident = "Hello1";
   |         ^^^^^^^^^^^^
   = note: this error originates in the macro `invoke_it` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
